objects/Contact_associ_s_l_opportunit__c.object
<CustomObject>
    <description>Contient l&apos;ensemble des contacts en lien avec l&apos;opportunité ayant un rôle secondaire.</description>
    <fields>
        <fullName>A_remercier__c</fullName>
        <defaultValue>true</defaultValue>
        <label>A remercier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contacts_associ_s_l_opportunit</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Formule_format_mapping__c</fullName>
        <formula>UPPER(Contact__r.LastName)
&amp;&quot;, &quot;&amp;

UPPER(LEFT( Contact__r.FirstName ,1))&amp;LOWER(Mid(Contact__r.FirstName, 2, Len(Contact__r.FirstName)-1))</formula>
        <label>Formule format mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_du_contact__c</fullName>
        <formula>Contact__r.Id</formula>
        <label>ID du contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunit__c</fullName>
        <label>Opportunité</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Contacts_associ_s_l_opportunit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_sur_l_opportunite__c</fullName>
        <label>Role sur l&apos;opportunité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Responsable légal</fullName>
                </value>
                <value>
                    <fullName>Prescripteur agent</fullName>
                </value>
                <value>
                    <fullName>Prescripteur coopteur</fullName>
                </value>
                <value>
                    <fullName>Prescripteur décideur</fullName>
                </value>
                <value>
                    <fullName>Prescripteur gestionnaire RH</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Agent recruteur</fullName>
                </value>
                <value>
                    <fullName>Cooptation via diplomés</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_sur_opportunite__c</fullName>
        <label>Role sur l&apos;opportunité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Responsable légal</fullName>
                </value>
                <value>
                    <fullName>Prescripteur agent</fullName>
                </value>
                <value>
                    <fullName>Prescripteur coopteur</fullName>
                </value>
                <value>
                    <fullName>Prescripteur décideur</fullName>
                </value>
                <value>
                    <fullName>Prescripteur gestionnaire RH</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Agent recruteur</fullName>
                </value>
                <value>
                    <fullName>Cooptation via diplomés</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Ambassadeur</fullName>
                </value>
                <value>
                    <fullName>Porteur</fullName>
                </value>
                <value>
                    <fullName>Relai entreprise</fullName>
                </value>
                <value>
                    <fullName>Contact principal</fullName>
                </value>
                <value>
                    <fullName>Interlocuteur TAXE</fullName>
                </value>
                <value>
                    <fullName>Gestionnaire</fullName>
                </value>
                <value>
                    <fullName>TAXEVIP</fullName>
                </value>
                <value>
                    <fullName>TAXEPRI</fullName>
                </value>
                <value>
                    <fullName>TAXEGEST</fullName>
                </value>
                <value>
                    <fullName>TAXEPRES</fullName>
                </value>
                <value>
                    <fullName>Prescripteur achat</fullName>
                </value>
                <value>
                    <fullName>Prescripteur</fullName>
                </value>
                <value>
                    <fullName>TAXEPROC</fullName>
                </value>
                <value>
                    <fullName>Responsable pédagogique</fullName>
                </value>
                <value>
                    <fullName>Contact secondaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>x18caracteres__c</fullName>
        <formula>CASESAFEID(ID_du_contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x18caracteres</label>
        <type>Text</type>
    </fields>
    <label>Rôle sur opportunité</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Numéro de lien contact opportunité</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rôles sur opportunité</pluralLabel>
    <recordTypes>
        <fullName>FC_Programme_Long</fullName>
        <active>true</active>
        <label>FC Programme Long</label>
    </recordTypes>
    <recordTypes>
        <fullName>FC_Sur_Mesure</fullName>
        <active>true</active>
        <label>FC Sur-Mesure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Formation_courte</fullName>
        <active>true</active>
        <label>Formation courte</label>
    </recordTypes>
    <recordTypes>
        <fullName>Formation_initiale</fullName>
        <active>true</active>
        <label>Formation initiale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising</fullName>
        <active>true</active>
        <label>Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taxe</fullName>
        <active>true</active>
        <label>Taxe</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>